[package]
name = "cubism"
version = "0.1.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2021"
description = "A basic pixel canvas for Rust"
repository = "https://github.com/Dzejkop/cubism"
documentation = "https://docs.rs/cubism"
readme = "../README.md"
license = "MIT"
categories = ["gui", "graphics", "2d"]
keywords = [
    "gui",
    "graphics",
    "2d",
    "pixel",
    "canvas",
    "game",
    "engine",
    "bevy",
    "pixels",
]

[dependencies]
bevy = "0.9"
ab_glyph = "0.2"

[dev-dependencies]
rand = "0.8"
