[package]
name = "cubism"
version = "0.2.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2021"
description = "A basic pixel canvas for Rust"
repository = "https://github.com/Dzejkop/cubism"
documentation = "https://docs.rs/cubism"
readme = "README.md"
license = "MIT"
categories = ["gui", "graphics", "2d"]
keywords = [
    "gui",
    "graphics",
    "2d",
    "pixel",
    "canvas",
]

[features]
default = [ "bevy_ext" ]
bevy_ext = [ "bevy" ]

[dependencies]
bevy = { version = "0.9", optional = true }
ab_glyph = "0.2"

[dev-dependencies]
bevy = "0.9"
rand = "0.8"
